@@ -4,7 +4,6 @@
    instrumentation agent."
   (:require [clj-http.client :as client]
             [clojure.string :as str]
-            [example.common-utils.middleware :as middleware]
             [muuntaja.core :as m]
             [reitit.ring :as ring]
             [reitit.ring.middleware.exception :as exception]
@@ -111,14 +110,15 @@
                                     :get  get-summary-handler}]
                                   {:data {:muuntaja   m/instance
                                           :middleware [;; Add route data
-                                                       middleware/wrap-reitit-route
+                                                       trace-http/wrap-reitit-route
 
                                                        parameters/parameters-middleware
                                                        muuntaja/format-middleware
                                                        exception/exception-middleware
 
-                                                       ;; Add exception event
-                                                       middleware/wrap-exception-event]}})
+                                                       ;; Add exception event before
+                                                       ;; exception-middleware runs
+                                                       trace-http/wrap-exception-event]}})
                      (ring/create-default-handler)
 
                      ;; Wrap handling of all requests, including those which have no matching
