@@ -1,13 +1,0 @@
-;!zprint {:width 140}
-
-{:paths   ["src"]
-
- :deps    {org.clojure/clojure {:mvn/version "1.11.1"}
-           ring/ring-core      {:mvn/version "1.10.0"}
-           com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.4"}}
-
- :aliases {;; Used for development of clj-otel-* libraries with the examples
-
-           :dev {:override-deps {com.github.steffan-westcott/clj-otel-api {:local/root "../../../clj-otel-api"}}}
-
-          }}
