@@ -2,13 +2,12 @@
 
 {:paths ["src" "resources"]
 
- :deps {org.clojure/clojure {:mvn/version "1.11.1"}
+ :deps {org.clojure/clojure       {:mvn/version "1.11.1"}
         com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.4"}
         com.github.steffan-westcott/clj-otel-instrumentation-runtime-telemetry-java8 {:mvn/version "0.2.4"}
-        metosin/reitit-ring {:mvn/version "0.6.0"}
+        metosin/reitit-ring       {:mvn/version "0.6.0"}
         metosin/reitit-middleware {:mvn/version "0.6.0"}
-        ring/ring-jetty-adapter {:mvn/version "1.10.0"}
-        org.example/common-utils.middleware {:local/root "../../../common-utils/middleware"}}
+        ring/ring-jetty-adapter   {:mvn/version "1.10.0"}}
 
  :aliases
  {;; Include this alias to export telemetry data
