@@ -2,8 +2,7 @@
   "Example application demonstrating using `clj-otel` to add telemetry to a
    synchronous Ring HTTP service that is run without the OpenTelemetry
    instrumentation agent."
-  (:require [example.common-utils.middleware :as middleware]
-            [muuntaja.core :as m]
+  (:require [muuntaja.core :as m]
             [reitit.ring :as ring]
             [reitit.ring.middleware.exception :as exception]
             [reitit.ring.middleware.muuntaja :as muuntaja]
@@ -93,7 +92,7 @@
                                     :get  get-random-word-handler}]
                                   {:data {:muuntaja   m/instance
                                           :middleware [;; Add route data
-                                                       middleware/wrap-reitit-route
+                                                       trace-http/wrap-reitit-route
 
                                                        ;; Add metrics that include http.route
                                                        ;; attribute
@@ -105,7 +104,7 @@
 
                                                        ;; Add exception event before
                                                        ;; exception-middleware runs
-                                                       middleware/wrap-exception-event]}})
+                                                       trace-http/wrap-exception-event]}})
                      (ring/create-default-handler)
 
                      ;; Wrap handling of all requests, including those which have no matching
